  [BUG FIXES]
  1. Prevent warnings about "uninitialized values" for REQUEST_URI, HTTP_USER_AGENT and other environment variables.
     Patches by Callum Gibson, heiko and Mark Stosberg. (RT#24684, RT#29065)
  2. Avoid death in some cases when running under Taint mode on Windows. 
     Patch by Peter Hancock (RT#43796)
  3. Allow 0 to be used as a default value in popup_menu(). This was broken starting in 3.37.
     Thanks to Haze, who was the first to report this and supply a patch, and pfschill, who pinpointed
     when the bug was introduced. A regression test for this was also added. (RT#37908)
  4. Allow "+" as a valid character in file names, which fixes temp file creation on OS X Leopard.  
     Thanks to Andy Armstrong, and alech for patches. (RT#30504) 
  5. Set binmode() on the Netware platform, thanks to Guenter Knauf (RT#27455)
  6. Don't allow a CGI::Carp error handler to die recursively. Print a warning and exit instead. 
     Thanks to Marc Chantreux. (RT#45956)

  [DOCUMENTATION]
  1. Several typos were fixed, Thanks to ambs. (RT#41105)
  2. A typo related to the nosticky pragma was fixed, thanks to Britton Kerin. (RT#43220)
  3. examples/nph-clock.cgi is now more portable, by calling localtime() rather than `/bin/date`,
     thanks to Guenter Knauf. (RT#27456).
  4. In CGI::Carp, the SEE ALSO section was cleaned up, thanks to Slaven Rezic. (RT#32769)

  [INTERNALS]  
  1. New t/unescapeHTML.t test script has been added. It includes a TODO test for a pre-existing
     bug which could use a patch. Thanks to Pete Gamache and Mark Stosberg (RT#39122)
  2. New t/user_agent.t test script has been added. Thanks to Mark Stosberg.  
  3. New t/popup_menu.t test script has been added. Thanks to Mark Stosberg. (RT#37908)

  Version 3.44
  1. Patch from Kurt Jaeger to allow HTTP PUT even if the content length is unknown.
  2. Patch from Pavel merdin to fix a problem for one of the FireFox addons.